--- a/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using  CVApp.Models
+@inject SignInManager<CVAppUser> SignInManager
+@inject UserManager<CVAppUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
