Data Models revisited - Resume DM created; Start MVC created; PersonalInfo MVC created; Problem with TinyMCE -  not showing basic text redactor panel; Remove Lazy loading; File upload with Cloudinary created;

--- a/src/CVApp/Web/CVApp.Web/Views/Home/Index.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         <hr class="my-4">
         @if (this.User.Identity.IsAuthenticated)
         {
-            <a asp-controller="PersonalInfo" asp-action="Index" class="btn btn-primary btn-lg">Start</a>
+            <a asp-controller="Start" asp-action="Index" class="btn btn-primary btn-lg">Start</a>
         }
         else
         {
