--- a/src/CVApp/Web/CVApp.Web/Views/Shared/_Layout.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
     </footer>
 
     <environment include="Development">
+        <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     </environment>
