--- a/src/CVApp/Web/CVApp.Web/Views/Shared/Error.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/Error.cshtml
@@ -9,7 +9,7 @@
 
         @if (ViewData["Error"] != null)
         {
-            <h3>@ViewData["Errors"]</h3>
+            <h3>@ViewData["Error"]</h3>
         }
         <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
     </div>
