--- a/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
                     My Resume
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" asp-controller="Resume" asp-action="Index">Resume</a>
+                    <a class="dropdown-item" asp-controller="Resume" asp-action="Display">Resume</a>
                     <a class="dropdown-item" asp-controller="PersonalInfo" asp-action="Index">Personal Info</a>
                     <a class="dropdown-item" asp-controller="Education" asp-action="Index">Education</a>
                     <a class="dropdown-item" asp-controller="Work" asp-action="Index">Work</a>
