--- a/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Edit.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Edit.cshtml
@@ -1,117 +1,113 @@
 ﻿@model CVApp.ViewModels.PersonalInfo.PersonalInfoViewModel
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 offset-2">
-                <h2>Personal Information</h2>
-                <hr />
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 offset-2">
+            <h2>Personal Information</h2>
+            <hr />
 
-                <form method="post" enctype="multipart/form-data" asp-controller="PersonalInfo" asp-action="Index">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label asp-for="FirstName">First name</label>
-                            <input asp-for="FirstName" class="form-control" value="@Model.FirstName">
-                            <span asp-validation-for="FirstName" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label asp-for="LastName">Last name</label>
-                            <input asp-for="LastName" class="form-control" value="@Model.LastName">
-                            <span asp-validation-for="LastName" class="text-danger"></span>
-                        </div>
+            <form method="post" enctype="multipart/form-data" asp-controller="PersonalInfo" asp-action="Index">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label asp-for="FirstName">First name</label>
+                        <input asp-for="FirstName" class="form-control" value="@Model.FirstName">
+                        <span asp-validation-for="FirstName" class="text-danger"></span>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label asp-for="Email">Email</label>
-                            <input asp-for="Email" class="form-control" value="@Model.Email">
-                            <span asp-validation-for="Email" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label asp-for="PhoneNumber">Phone Number</label>
-                            <input asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber">
-                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                        </div>
+                    <div class="form-group col-md-6">
+                        <label asp-for="LastName">Last name</label>
+                        <input asp-for="LastName" class="form-control" value="@Model.LastName">
+                        <span asp-validation-for="LastName" class="text-danger"></span>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label asp-for="DateOfBirth">Date of birth</label>
-                            <!--the input format is dd/MM/yyyy-->
-                            <input asp-for="DateOfBirth" type="date" class="form-control" value="@Model.DateOfBirth">
-                            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label asp-for="RepoProfile">Portfolio</label>
-                            <input asp-for="RepoProfile" type="url" class="form-control" value="@Model.RepoProfile">
-                            <span asp-validation-for="RepoProfile" class="text-danger"></span>
-                        </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label asp-for="Email">Email</label>
+                        <input asp-for="Email" class="form-control" value="@Model.Email">
+                        <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label asp-for="Picture">Picture:</label>
-                            <input asp-for="Picture" type="file" class="form-control-file">
-                            <span asp-validation-for="Picture" class="text-danger"></span>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <label asp-for="CurrentPicture">Current Picture</label>
-                            <div class="input-group">
-                                <input asp-for="CurrentPicture" type="url" class="form-control" value="@Model.CurrentPicture" readonly>
-                                <div class="input-group-append ml-3">
-                                    <a href="javascript:void(0);" data-url="@Model.CurrentPicture" class="deleteItem" style="color:red">X</a>
-                                </div>
+                    <div class="form-group col-md-6">
+                        <label asp-for="PhoneNumber">Phone Number</label>
+                        <input asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber">
+                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label asp-for="DateOfBirth">Date of birth</label>
+                        <input asp-for="DateOfBirth" type="text" class="form-control" value="@Model.DateOfBirth.ToShortDateString()" readonly>
+                        <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label asp-for="RepoProfile">Portfolio</label>
+                        <input asp-for="RepoProfile" type="url" class="form-control" value="@Model.RepoProfile">
+                        <span asp-validation-for="RepoProfile" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label asp-for="Picture">Picture:</label>
+                        <input asp-for="Picture" type="file" class="form-control-file">
+                        <span asp-validation-for="Picture" class="text-danger"></span>
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label asp-for="CurrentPicture">Current Picture</label>
+                        <div class="input-group">
+                            <input asp-for="CurrentPicture" type="url" class="form-control" value="@Model.CurrentPicture" readonly>
+                            <div class="input-group-append ml-3">
+                                <a href="javascript:void(0);" data-url="@Model.CurrentPicture" class="deleteItem" style="color:red">X</a>
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Address">Address</label>
-                        <input asp-for="Address" class="form-control" value="@Model.Address">
-                        <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address">Address</label>
+                    <input asp-for="Address" class="form-control" value="@Model.Address">
+                    <span asp-validation-for="Address" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Summary">Summary</label>
+                    <textarea id="mytextarea" asp-for="Summary" class="form-control" rows="5" value=@Html.Raw(Model.Summary)></textarea>
+                    <span asp-validation-for="Summary" class="text-danger"></span>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <button type="submit" class="btn btn-primary">Save</button>
                     </div>
-                    <div class="form-group">
-                        <label asp-for="Summary">Summary</label>
-                        <textarea id="mytextarea" asp-for="Summary" class="form-control" rows="5" value="@Model.Summary"></textarea>
-                        <span asp-validation-for="Summary" class="text-danger"></span>
+                    <div class="col-md-auto">
+                        <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <button type="submit" class="btn btn-primary">Save</button>
-                        </div>
-                        <div class="col-md-auto">
-                            <a href="javascript:void(0);" onclick="history.go(-1);" class="btn btn-info" role="button">Back</a>
-                        </div>
-                    </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
+</div>
 
 @section Scripts {
-    <script>tinymce.init({ selector: '#mytextarea' });</script>
+    <script>tinymce.init({ selector: '#mytextarea'});</script>
 
     <script>
         $('.deleteItem').click(function (e) {
-           e.preventDefault();
-           var $ctrl = $(this);
-           if (confirm('Do you really want to delete this file?')) {
-               $.ajax({
-                   url: "/PersonalInfo/DeletePicture",
-                   method: 'GET',
-                   //headers: { "RequestVerificationToken": $('form').find("input[name='af_token']").val() },
-                   //dataType: "json",
-                   //contentType: "application/json"
-               }).then(function (data) {
-                   if (data.result == "OK") {
-                       $('#CurrentPicture').val("");
-                   }
-                   else if (data.result.Message) {
-                       alert(data.result.Message);
-                   }
-               }).catch(function (error) {
-                   alert(error + "There is something wrong. Please try again.");
-               })
+            e.preventDefault();
+            var $ctrl = $(this);
+            if (confirm('Do you really want to delete this file?')) {
+                $.ajax({
+                    url: "/PersonalInfo/DeletePicture",
+                    method: 'POST',
+                    headers: { "RequestVerificationToken": $('form').find("input[name='__RequestVerificationToken']").val() },
+                }).then(function (data) {
+                    if (data.result == "OK") {
+                        $('#CurrentPicture').val("");
+                    }
+                    else if (data.result.Message) {
+                        alert(data.result.Message);
+                    }
+                }).catch(function (error) {
+                    alert(error + "There is something wrong. Please try again.");
+                })
 
-           }
+            }
         });
-    });
     </script>
 
     <partial name="_ValidationScriptsPartial" />
