--- a/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Edit.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/PersonalInfo/Edit.cshtml
@@ -65,7 +65,7 @@
                     <input asp-for="Address" class="form-control" value="@Model.Address">
                     <span asp-validation-for="Address" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group" style="padding: 1px;">
                     <label asp-for="Summary">Summary</label>
                     <textarea id="mytextarea" asp-for="Summary" class="form-control" rows="5" value=@Html.Raw(Model.Summary)></textarea>
                     <span asp-validation-for="Summary" class="text-danger"></span>
@@ -84,7 +84,12 @@
 </div>
 
 @section Scripts {
-    <script>tinymce.init({ selector: '#mytextarea'});</script>
+    <script>
+        tinymce.init({
+            selector: '#mytextarea',
+            pulugins: ["lists advlist"],
+            toolbar: "undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent "
+        });</script>
 
     <script>
         $('.deleteItem').click(function (e) {
