--- a/src/CVApp/Web/CVApp.Web/Views/Work/Delete.cshtml
+++ b/src/CVApp/Web/CVApp.Web/Views/Work/Delete.cshtml
@@ -1,68 +1,62 @@
-﻿@model CVApp.ViewModels.Education.EducationEditViewModel
-
-
+﻿@model CVApp.ViewModels.Work.WorkEditViewModel
 
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-2">
-            <h2> Edit Education</h2>
+            <h2>Work</h2>
             <hr />
-            <form method="post" id="educationForm">
-                <input asp-for="@Model.InputVM.ResumeId" type=hidden value="@Model.InputVM.ResumeId"/>
+            <form method="post">
+                <input asp-for="@Model.InputVM.ResumeId" type=hidden value="@Model.InputVM.ResumeId" />
                 <div class="form-element">
                     <div class="form-group">
-                        <label asp-for="@Model.InputVM.Institution">Institution Name</label>
-                        <input asp-for="@Model.InputVM.Institution" class="form-control" value="@Model.InputVM.Institution" readonly>
+                        <label asp-for="@Model.InputVM.Company">Employer</label>
+                        <input asp-for="@Model.InputVM.Company" class="form-control" value="@Model.InputVM.Company" readonly>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="@Model.InputVM.Title">Job Title</label>
+                        <input asp-for="@Model.InputVM.Title" class="form-control" value="@Model.InputVM.Title" readonly>
                     </div>
                     <div class="form-row">
                         <!--DatePicker from Tempus Dominus-->
-                        <div class='col-md-4'>
+                        <div class='col-md-6'>
                             <div class="form-group">
                                 <label asp-for="@Model.InputVM.FromYear">Start year</label>
                                 <div class="input-group date" id="datetimepicker7" data-target-input="nearest">
-                                    <input asp-for="@Model.InputVM.FromYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker7" value="@Model.InputVM.FromYear" readonly/>
+                                    <input asp-for="@Model.InputVM.FromYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker7" value="" readonly/>
                                     <div class="input-group-append" data-target="#datetimepicker7" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class='col-md-4'>
+                        <div class='col-md-6'>
                             <div class="form-group">
                                 <label asp-for="@Model.InputVM.ToYear">End year</label>
                                 <div class="input-group date" id="datetimepicker8" data-target-input="nearest">
-                                    <input asp-for="@Model.InputVM.ToYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker8" value="@Model.InputVM.ToYear" readonly/>
+                                    <input asp-for="@Model.InputVM.ToYear" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker8" value="" readonly/>
                                     <div class="input-group-append" data-target="#datetimepicker8" data-toggle="datetimepicker">
                                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="form-group col-md-4">
-                            <label asp-for="@Model.InputVM.GPA">GPA</label>
-                            <input asp-for="@Model.InputVM.GPA" class="form-control" value="@Model.InputVM.GPA" readonly />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="@Model.InputVM.Diploma">Diploma Title</label>
-                        <input asp-for="@Model.InputVM.Diploma" class="form-control" value="@Model.InputVM.Diploma" readonly />
                     </div>
                     <div class="form-group" style="padding: 1px;">
-                        <label asp-for="@Model.InputVM.MainSubjects">Main Subjects</label>
-                        <textarea asp-for="@Model.InputVM.MainSubjects" class="form-control myTextarea" rows="5" value="@Html.Raw(Model.InputVM.MainSubjects)" ></textarea>
+                        <label asp-for="@Model.InputVM.Description">Job Description</label>
+                        <textarea asp-for="@Model.InputVM.Description" class="form-control myTextarea" rows="5"></textarea>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label asp-for="@Model.InputVM.Country">Country</label>
-                            <input asp-for="@Model.InputVM.Country" class="form-control" value="@Model.InputVM.Country" />
+                            <input asp-for="@Model.InputVM.Country" class="form-control" value="@Model.InputVM.Country" readonly />
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="@Model.InputVM.Region">Region</label>
-                            <input asp-for="@Model.InputVM.Region" class="form-control" value="@Model.InputVM.Region" />
+                           <input asp-for="@Model.InputVM.Region" class="form-control" value="@Model.InputVM.Region" readonly/>
                         </div>
                         <div class="form-group col-md-6">
                             <label asp-for="@Model.InputVM.City">City</label>
-                            <input asp-for="@Model.InputVM.City" class="form-control" value="@Model.InputVM.City" />
+                            <input asp-for="@Model.InputVM.City" class="form-control" value="@Model.InputVM.City" readonly />
                         </div>
                     </div>
                     <hr />
@@ -89,7 +83,7 @@
             AddDateTimePicker();
         });
 
-    setTimeout(function () {
+   setTimeout(function () {
         tinymce.activeEditor.setMode('readonly');
         }, 500);
 
@@ -98,12 +92,11 @@
     ); $('#datetimepicker7').attr('readonly','readonly');}, 500);
 
     setTimeout(function () {$('#datetimepicker8').datetimepicker(
-        'date', moment('@Model.InputVM.ToYear.ToString("MM/YYYY")', 'MM/YYYY')
+        'date', moment('@Model.InputVM.ToYear.HasValue?Model.InputVM.Value.ToString("MM/YYYY"): ""', 'MM/YYYY')
     );
         $('#datetimepicker8').attr('readonly','readonly');
     }, 500);
     </script>
     <partial name="_ValidationScriptsPartial" />
 }
-
 
